--- a/custom_component/rohlikcz/translations/cs.json
+++ b/custom_component/rohlikcz/translations/cs.json
@@ -2,246 +2,98 @@
   "config": {
     "step": {
       "user": {
-        "title": "Přidej odjezdovou tabuli",
-        "description": "Vyplň konfigurační data. Více info v dokumentaci",
+        "title": "Účet Rohlik.cz",
+        "description": "Zadejte své přihlašovací údaje do Rohlik.cz.",
         "data": {
-          "stop_selector": "Vyber zastávku",
-          "api_key": "Vlož API klíč",
-          "departures_number": "Vyber počet odjezdů k zobrazení",
-          "cal_events_count": "Počet kalendářních událostí odjezdů"
+          "username": "E-mail",
+          "password": "Heslo"
         },
         "data_description": {
-          "stop_selector": "Začni psát k hledání",
-          "api_key": "API klíč pro Golemio API"
+          "username": "Váš e-mail pro přihlášení do Rohlik.cz",
+          "password": "Vaše heslo pro přihlášení do Rohlik.cz"
         }
       }
     },
     "error": {
-      "cannot_connect": "Neznámá chyba připojení k API",
-      "stop_not_in_list": "Zastávka nenalezena v seznamu - vyber zastávku ze seznamu.",
-      "stop_not_found": "Zastávka s daným aswIds nenalezena.",
-      "no_departures_selected": "Počet odjezdů nemůže být 0.",
-      "wrong_api_key": "Připojení nebylo autorizováno, poskytnut chybný API klíč."
+      "cannot_connect": "Připojení k Rohlik.cz selhalo",
+      "invalid_auth": "Neplatné přihlašovací údaje",
+      "unknown": "Neočekávaná chyba"
+    },
+    "abort": {
+      "already_configured": "Účet je již nakonfigurován"
     }
   },
   "entity": {
     "binary_sensor": {
-      "infotext": {
-        "name": "Infotext"
-      },
-      "wheelchair_accessible": {
-        "name": "Bezbariérový spoj",
+      "is_reusable": {
+        "name": "Vratné tašky",
         "state": {
-          "on": "Ano",
-          "off": "Ne"
+          "on": "Aktivní",
+          "off": "Neaktivní"
         }
-      }
-    },
-    "calendar": {
-      "departures": {
-        "name": "Vozidlo na zastávce",
+      },
+      "is_parent": {
+        "name": "Rohlíček",
         "state": {
-          "on": "Ano",
-          "off": "Ne"
-        },
-        "state_attributes": {
-          "arrival_time_est": {
-            "name": "Čas příjezdu (vč. zpoždění)"
-          },
-          "arrival_time_sched": {
-            "name": "Čas příjezdu (plánovaný)"
-          },
-          "departure_time_est": {
-            "name": "Čas odjezdu (vč. zpoždění)"
-          },
-          "departure_time_sched": {
-            "name": "Čas odjezdu (plánovaný)"
-          },
-          "is_delay_avail": {
-            "name": "Zpoždění dostupné"
-          },
-          "delay_sec": {
-            "name": "Zpoždění (sekundy)"
-          },
-          "route_name": {
-            "name": "Číslo linky"
-          },
-          "route_type": {
-            "name": "Typ linky",
-            "state": {
-              "tram": "Tram",
-              "metro": "Metro",
-              "train": "Vlak",
-              "bus": "Bus",
-              "ferry": "Trajekt",
-              "funicular": "Lanovka",
-              "trolleybus": "Trolejbus"
-            }
-          },
-          "train_number": {
-            "name": "Číslo vlaku"
-          },
-          "trip_id": {
-            "name": "GTFS ID trasy"
-          },
-          "trip_direction": {
-            "name": "Směr další jízdy"
-          },
-          "trip_headsign": {
-            "name": "Směr spoje (cílová zastávka)"
-          },
-          "is_air_conditioned": {
-            "name": "Vozidlo má klimatizaci"
-          },
-          "is_at_stop": {
-            "name": "Vozidlo je fyzicky v zastávce"
-          },
-          "is_canceled": {
-            "name": "Spoj je zrušený"
-          },
-          "is_night": {
-            "name": "Noční linka"
-          },
-          "is_regional": {
-            "name": "Příměstská nebo regionální linka"
-          },
-          "is_substitute": {
-            "name": "Náhradní linka"
-          },
-          "is_wheelchair_accessible": {
-            "name": "Vozidlo je bezbariérové"
-          },
-          "last_stop_id": {
-            "name": "GTFS ID poslední reportované zastávky"
-          },
-          "last_stop_name": {
-            "name": "Název poslední reportované zastávky"
-          },
-          "stop_id": {
-            "name": "GTFS ID zastávky"
-          },
-          "stop_platform": {
-            "name": "Kód stanoviště zastávky"
-          },
-          "latitude": {
-            "name": "Poloha zastávky (z.š.)"
-          },
-          "longitude": {
-            "name": "Poloha zastávky (z.d.)"
-          }
+          "on": "Člen",
+          "off": "Není členem"
+        }
+      },
+      "is_premium": {
+        "name": "Premium členství",
+        "state": {
+          "on": "Aktivní",
+          "off": "Neaktivní"
+        }
+      },
+      "next_order": {
+        "name": "Nadcházející objednávka",
+        "state": {
+          "on": "Naplánována",
+          "off": "Není naplánována"
+        }
+      },
+      "timeslot_reservation": {
+        "name": "Rezervace časového slotu",
+        "state": {
+          "on": "Rezervováno",
+          "off": "Není rezervováno"
         }
       }
     },
     "sensor": {
-      "departure_time": {
-        "name": "Čas příštího odjezdu ({num})"
+      "first_delivery": {
+        "name": "Nejbližší dostupný rozvoz"
       },
-      "latitude": {
-        "name": "Poloha zastávky (z.š.)"
+      "account_id": {
+        "name": "ID účtu"
       },
-      "longitude": {
-        "name": "Poloha zastávky (z.d.)"
+      "email": {
+        "name": "E-mail"
       },
-      "platform": {
-        "name": "Kód stanoviště"
+      "phone": {
+        "name": "Telefon"
       },
-      "route_name": {
-        "name": "Příští linka ({num})",
-        "state_attributes": {
-          "arrival_time_est": {
-            "name": "Čas příjezdu (vč. zpoždění)"
-          },
-          "arrival_time_sched": {
-            "name": "Čas příjezdu (plánovaný)"
-          },
-          "departure_time_est": {
-            "name": "Čas odjezdu (vč. zpoždění)"
-          },
-          "departure_time_sched": {
-            "name": "Čas odjezdu (plánovaný)"
-          },
-          "is_delay_avail": {
-            "name": "Zpoždění dostupné"
-          },
-          "delay_sec": {
-            "name": "Zpoždění (sekundy)"
-          },
-          "route_name": {
-            "name": "Číslo linky"
-          },
-          "route_type": {
-            "name": "Typ linky",
-            "state": {
-              "tram": "Tram",
-              "metro": "Metro",
-              "train": "Vlak",
-              "bus": "Bus",
-              "ferry": "Trajekt",
-              "funicular": "Lanovka",
-              "trolleybus": "Trolejbus"
-            }
-          },
-          "train_number": {
-            "name": "Číslo vlaku"
-          },
-          "trip_id": {
-            "name": "GTFS ID trasy"
-          },
-          "trip_direction": {
-            "name": "Směr další jízdy"
-          },
-          "trip_headsign": {
-            "name": "Směr spoje (cílová zastávka)"
-          },
-          "is_air_conditioned": {
-            "name": "Vozidlo má klimatizaci"
-          },
-          "is_at_stop": {
-            "name": "Vozidlo je fyzicky v zastávce"
-          },
-          "is_canceled": {
-            "name": "Spoj je zrušený"
-          },
-          "is_night": {
-            "name": "Noční linka"
-          },
-          "is_regional": {
-            "name": "Příměstská nebo regionální linka"
-          },
-          "is_substitute": {
-            "name": "Náhradní linka"
-          },
-          "is_wheelchair_accessible": {
-            "name": "Vozidlo je bezbariérové"
-          },
-          "last_stop_id": {
-            "name": "GTFS ID poslední reportované zastávky"
-          },
-          "last_stop_name": {
-            "name": "Název poslední reportované zastávky"
-          },
-          "stop_id": {
-            "name": "GTFS ID zastávky"
-          },
-          "stop_platform": {
-            "name": "Kód stanoviště zastávky"
-          },
-          "latitude": {
-            "name": "Poloha zastávky (z.š.)"
-          },
-          "longitude": {
-            "name": "Poloha zastávky (z.d.)"
-          }
-        }
+      "no_limit": {
+        "name": "Zbývající objednávky bez limitu"
       },
-      "stop_name": {
-        "name": "Název zastávky"
+      "free_express": {
+        "name": "Zbývající expresní doručení zdarma"
+      },
+      "credit_amount": {
+        "name": "Zůstatek kreditu"
+      },
+      "bags_amount": {
+        "name": "Počet vratných tašek"
+      },
+      "premium_days": {
+        "name": "Zbývající dny Premium"
+      },
+      "cart_price": {
+        "name": "Celková cena košíku"
       },
       "updated": {
-        "name": "Aktualizováno"
-      },
-      "zone": {
-        "name": "Zóna"
+        "name": "Naposledy aktualizováno"
       }
     }
   }
