--- a/custom_component/rohlikcz/translations/en.json
+++ b/custom_component/rohlikcz/translations/en.json
@@ -97,6 +97,9 @@
       },
       "updated": {
         "name": "Last Updated"
+      },
+      "last_order": {
+        "name": "Last Order"
       }
     }
   }
