--- a/custom_component/rohlikcz/translations/en.json
+++ b/custom_component/rohlikcz/translations/en.json
@@ -100,6 +100,12 @@
       },
       "last_order": {
         "name": "Last Order"
+      },
+      "next_order_since": {
+        "name": "Delivery Slot Start"
+      },
+      "next_order_till": {
+        "name": "Delivery Slot End"
       }
     }
   }
