Add new sensor with delivery info.

--- a/custom_components/rohlikcz/translations/cs.json
+++ b/custom_components/rohlikcz/translations/cs.json
@@ -122,6 +122,9 @@
       },
       "eco_slot": {
         "name": "Doručení eko"
+      },
+      "delivery_info": {
+        "name": "Informace o doručení"
       }
     }
   }
