Add strings for todo.

--- a/custom_components/rohlikcz/translations/cs.json
+++ b/custom_components/rohlikcz/translations/cs.json
@@ -126,6 +126,11 @@
       "delivery_info": {
         "name": "Informace o doručení"
       }
+    },
+    "todo": {
+      "shopping_cart": {
+        "name": "Nákupní košík"
+      }
     }
   }
 }
