minor improvements to the parsing logic, add sensor for delivery time ETA

--- a/custom_components/rohlikcz/translations/cs.json
+++ b/custom_components/rohlikcz/translations/cs.json
@@ -123,6 +123,12 @@
       },
       "delivery_info": {
         "name": "Informace o doručení"
+      },
+      "delivery_eta": {
+        "name": "Čas doručení (ETA)"
+      },
+      "next_order_number": {
+        "name": "Číslo další objednávky"
       }
     },
     "todo": {
